# burndown

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
burndown/: __init__.py  aggregate.py  cli.py  config.py  forecast.py  logs.py  money.py  pricing.py  report.py  serve.py
docs/: DECISIONS.md  SECURITY.md  index.html  vercel.json
tests/: conftest.py  test_aggregate.py  test_config.py  test_forecast.py  test_logs.py  test_money.py  test_pricing.py  test_serve.py
