[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burndown"
version = "0.1.0"
description = "A local, real-time cockpit for your Claude credit burn — burn rate, runway forecast, and budget alerts. Zero dependencies, nothing leaves your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aryaman Gupta", email = "rayman3304@gmail.com" }]
keywords = ["claude", "anthropic", "cost", "tokens", "budget", "cli", "local-first", "claude-code", "credits"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
# Zero runtime dependencies — by design. The whole tool is auditable in one read
# and has no supply-chain or network surface.
dependencies = []

[project.urls]
Homepage = "https://github.com/aryasgit/burndown"
Issues = "https://github.com/aryasgit/burndown/issues"

[project.scripts]
burndown = "burndown.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["burndown"]
