[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burndown"
version = "0.1.0"
description = "A local, real-time cockpit for your Claude credit burn — burn rate, runway forecast, and budget alerts. Zero dependencies, nothing leaves your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aryaman Gupta", email = "rayman3304@gmail.com" }]
keywords = ["claude", "anthropic", "cost", "tokens", "budget", "cli", "local-first", "claude-code", "credits"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
# Zero runtime dependencies — by design. The whole tool is auditable in one read
# and has no supply-chain or network surface.
dependencies = []

[project.urls]
Homepage = "https://github.com/aryasgit/burndown"
Source = "https://github.com/aryasgit/burndown"
Issues = "https://github.com/aryasgit/burndown/issues"
Changelog = "https://github.com/aryasgit/burndown/blob/main/CHANGELOG.md"

[project.scripts]
burndown = "burndown.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["burndown"]
